# xfce-clipboard-monitor-applet

./: README.md  clipboard-monitor.c  clipboard-monitor.desktop  meson.build
